--- a/_til_docs/Python.html
+++ b/_til_docs/Python.html
@@ -596,15 +596,29 @@
       border-bottom: 1px solid rgb(228, 230, 232);
       padding-bottom: .5rem;
       font-size: 2.07692308rem;
-      font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
       line-height: 1.35;
       font-weight: normal;
       color: rgb(60, 65, 70);
     }
 
+    .search-label-block {
+      display: flex;
+      align-items: center;
+    }
+
+    .search-articles-label {
+      flex: 1;
+    }
+
     #search-result-links {
       margin-bottom: 1rem;
     }
+
+    .shuffle-page:hover {
+      cursor: pointer;
+    }
+
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="utf-8" />
@@ -670,22 +684,26 @@
 <li><a class="" href="TCP-IP/IP_Fragmentation.html">IP Fragmentation</a></li>
 <li><a class="" href="TCP-IP/IP_Subnets.html">IP Subnets</a></li>
 <li><a class="" href="TCP-IP/Network_Layers.html">Network Layers</a></li>
+<li><a class="" href="TCP-IP/Routing.html">Routing</a></li>
 <li><a class="" href="TCP-IP/TCP-IP.html">TCP IP</a></li>
 <li><a class="" href="TCP-IP/Unix_Specific.html">Unix Specific</a></li>
-<li><a class="" href="TCP-IP/routing.html">routing</a></li>
 </ul>
 <li><a class="" href="docker-compose.html">docker compose</a></li>
 </ul>
     </nav>
     <article id="main" class="content">
       <h1 id="page-title" class="page-header">Default</h1>
-
-      <label class="mdb-main-label active">Search Articles</label>
+      <div class="search-label-block">
+        <label class="mdb-main-label active search-articles-label">Search Articles</label>
+        <a onclick="linkToRandomPage()" class="shuffle-page">
+          <img src="/public/shuffle.svg" width="23" height="40" />
+        </a>
+      </div>
       <input id="article-search" type="text" class="w-100 search-input" placeholder="Vue..."></input>
       <div id="search-result-links">
 
       </div>
-      
+
       <h1 id="python-basics">Python Basics <a class="heading-anchor-permalink" href="#python-basics">#</a></h1>
 <h3 id="meta-classes">Meta Classes <a class="heading-anchor-permalink" href="#meta-classes">#</a></h3>
 <p>Meta Classes are classes where instances are of a class, rather than an instance of a class. Instances of meta classes can be used to define class behavior. Not a ton of languages support meta classes and the implementations differ (Python does).</p>
@@ -787,7 +805,7 @@ def printWord(word):
     let searchFuse;
     const searchResultsDiv = document.getElementById("search-result-links");
 
-    function renderResultLink(result){
+    function renderResultLink(result) {
       const url = result.item.url;
       let link = document.createElement("a");
       link.className = "search-link";
@@ -799,15 +817,23 @@ def printWord(word):
       searchResultsDiv.appendChild(link);
     }
 
-    function clearSearchResultsDiv(){
+    function clearSearchResultsDiv() {
       searchResultsDiv.innerHTML = "";
     }
+
+    function linkToRandomPage(){
+      let randomIndex = Math.floor(Math.random() * contentsData.length )
+      let randomPage = contentsData[randomIndex]
+      let url = `/${randomPage.url}`
+      window.location.pathname = randomPage.url
+    }
+
     function searchInputChanged(e) {
       const input = e.target.value;
       if (searchFuse) {
         clearSearchResultsDiv();
         const searchResults = searchFuse.search(input);
-        searchResults.forEach( result => renderResultLink(result));
+        searchResults.forEach(result => renderResultLink(result));
       }
     }
 
@@ -841,7 +867,6 @@ def printWord(word):
 
   <!-- Set header for each file to its filename -->
   <script>
-
     let headerEl = document.getElementById('page-title')
     let page = window.location.pathname
     //Strip trailing / if there is one
@@ -853,9 +878,8 @@ def printWord(word):
     let title = page.substring(page.lastIndexOf('/') + 1)
     title = title || "Home"
     headerEl.textContent = title
-
-
   </script>
+
 
   <script>
     // FROM http://purecss.io/js/ui.js
