--- a/_til_docs/TCP-IP/IP_Addresses.html
+++ b/_til_docs/TCP-IP/IP_Addresses.html
@@ -596,15 +596,29 @@
       border-bottom: 1px solid rgb(228, 230, 232);
       padding-bottom: .5rem;
       font-size: 2.07692308rem;
-      font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
       line-height: 1.35;
       font-weight: normal;
       color: rgb(60, 65, 70);
     }
 
+    .search-label-block {
+      display: flex;
+      align-items: center;
+    }
+
+    .search-articles-label {
+      flex: 1;
+    }
+
     #search-result-links {
       margin-bottom: 1rem;
     }
+
+    .shuffle-page:hover {
+      cursor: pointer;
+    }
+
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="utf-8" />
@@ -670,22 +684,26 @@
 <li><a class="" href="IP_Fragmentation.html">IP Fragmentation</a></li>
 <li><a class="" href="IP_Subnets.html">IP Subnets</a></li>
 <li><a class="" href="Network_Layers.html">Network Layers</a></li>
+<li><a class="" href="Routing.html">Routing</a></li>
 <li><a class="" href="TCP-IP.html">TCP IP</a></li>
 <li><a class="" href="Unix_Specific.html">Unix Specific</a></li>
-<li><a class="" href="routing.html">routing</a></li>
 </ul>
 <li><a class="" href="../docker-compose.html">docker compose</a></li>
 </ul>
     </nav>
     <article id="main" class="content">
       <h1 id="page-title" class="page-header">Default</h1>
-
-      <label class="mdb-main-label active">Search Articles</label>
+      <div class="search-label-block">
+        <label class="mdb-main-label active search-articles-label">Search Articles</label>
+        <a onclick="linkToRandomPage()" class="shuffle-page">
+          <img src="/public/shuffle.svg" width="23" height="40" />
+        </a>
+      </div>
       <input id="article-search" type="text" class="w-100 search-input" placeholder="Vue..."></input>
       <div id="search-result-links">
 
       </div>
-      
+
       <h3 id="ip-addresses">IP Addresses <a class="heading-anchor-permalink" href="#ip-addresses">#</a></h3>
 <p>IPv4 addresses are 4 byte (32 bit) values that describe a host machine. The four bytes are written in dotted notation, e.g. <code>140.2.1.12</code>. Each set of 8 bits can range from 0 to 255: <code>0.0.0.0</code> to <code>255.255.255.255</code>.</p>
 <p>There are different classes of IP addresses which detail how many of the 32 bits correspond to the <code>Network ID</code> and how many of the 32 bits correspond to the <code>Host ID</code>. Class B IP addresses which are probably the most common have 16 bits for the <code>Network ID</code> (the first 2 dotted stanzas) and <code>16 bits</code> for the <code>Host ID</code>. E.g. <code>140.2.1.12</code> has a <code>Network ID</code> of <code>140.2</code> and a <code>Host ID</code> of <code>1.12</code> if divided up this way.</p>
@@ -751,7 +769,7 @@
     let searchFuse;
     const searchResultsDiv = document.getElementById("search-result-links");
 
-    function renderResultLink(result){
+    function renderResultLink(result) {
       const url = result.item.url;
       let link = document.createElement("a");
       link.className = "search-link";
@@ -763,15 +781,23 @@
       searchResultsDiv.appendChild(link);
     }
 
-    function clearSearchResultsDiv(){
+    function clearSearchResultsDiv() {
       searchResultsDiv.innerHTML = "";
     }
+
+    function linkToRandomPage(){
+      let randomIndex = Math.floor(Math.random() * contentsData.length )
+      let randomPage = contentsData[randomIndex]
+      let url = `/${randomPage.url}`
+      window.location.pathname = randomPage.url
+    }
+
     function searchInputChanged(e) {
       const input = e.target.value;
       if (searchFuse) {
         clearSearchResultsDiv();
         const searchResults = searchFuse.search(input);
-        searchResults.forEach( result => renderResultLink(result));
+        searchResults.forEach(result => renderResultLink(result));
       }
     }
 
@@ -805,7 +831,6 @@
 
   <!-- Set header for each file to its filename -->
   <script>
-
     let headerEl = document.getElementById('page-title')
     let page = window.location.pathname
     //Strip trailing / if there is one
@@ -817,9 +842,8 @@
     let title = page.substring(page.lastIndexOf('/') + 1)
     title = title || "Home"
     headerEl.textContent = title
-
-
   </script>
+
 
   <script>
     // FROM http://purecss.io/js/ui.js
