--- a/_til_docs/TCP-IP/IP_Subnets.html
+++ b/_til_docs/TCP-IP/IP_Subnets.html
@@ -596,15 +596,29 @@
       border-bottom: 1px solid rgb(228, 230, 232);
       padding-bottom: .5rem;
       font-size: 2.07692308rem;
-      font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
       line-height: 1.35;
       font-weight: normal;
       color: rgb(60, 65, 70);
     }
 
+    .search-label-block {
+      display: flex;
+      align-items: center;
+    }
+
+    .search-articles-label {
+      flex: 1;
+    }
+
     #search-result-links {
       margin-bottom: 1rem;
     }
+
+    .shuffle-page:hover {
+      cursor: pointer;
+    }
+
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="utf-8" />
@@ -670,22 +684,26 @@
 <li><a class="" href="IP_Fragmentation.html">IP Fragmentation</a></li>
 <li><a class="active" href="IP_Subnets.html">IP Subnets</a></li>
 <li><a class="" href="Network_Layers.html">Network Layers</a></li>
+<li><a class="" href="Routing.html">Routing</a></li>
 <li><a class="" href="TCP-IP.html">TCP IP</a></li>
 <li><a class="" href="Unix_Specific.html">Unix Specific</a></li>
-<li><a class="" href="routing.html">routing</a></li>
 </ul>
 <li><a class="" href="../docker-compose.html">docker compose</a></li>
 </ul>
     </nav>
     <article id="main" class="content">
       <h1 id="page-title" class="page-header">Default</h1>
-
-      <label class="mdb-main-label active">Search Articles</label>
+      <div class="search-label-block">
+        <label class="mdb-main-label active search-articles-label">Search Articles</label>
+        <a onclick="linkToRandomPage()" class="shuffle-page">
+          <img src="/public/shuffle.svg" width="23" height="40" />
+        </a>
+      </div>
       <input id="article-search" type="text" class="w-100 search-input" placeholder="Vue..."></input>
       <div id="search-result-links">
 
       </div>
-      
+
       <p>[[IP_Addresses]]	]]</p>
 <h3 id="subnets">Subnets <a class="heading-anchor-permalink" href="#subnets">#</a></h3>
 <p>Subnets allow you to divide the 16 bits of <code>Host ID</code> even further into a <code>Subnet ID</code> and a smaller <code>Host ID</code>. For example, 8 of these 16 bits can then become a <code>Subnet ID</code> with the last 8 being the <code>Host ID</code>. This allows network administrators to divide up the IP address (<code>Network ID</code>) they are assigned into 254 subnets with a maximum of 254 subnets per host. In this case <code>140.2.1.12</code> would be broken up as follows: <code>140.2</code> for the <code>Network ID</code>, <code>1</code> for the <code>Subnet ID</code> and <code>12</code> for the <code>Host ID</code>.</p>
@@ -754,7 +772,7 @@
     let searchFuse;
     const searchResultsDiv = document.getElementById("search-result-links");
 
-    function renderResultLink(result){
+    function renderResultLink(result) {
       const url = result.item.url;
       let link = document.createElement("a");
       link.className = "search-link";
@@ -766,15 +784,23 @@
       searchResultsDiv.appendChild(link);
     }
 
-    function clearSearchResultsDiv(){
+    function clearSearchResultsDiv() {
       searchResultsDiv.innerHTML = "";
     }
+
+    function linkToRandomPage(){
+      let randomIndex = Math.floor(Math.random() * contentsData.length )
+      let randomPage = contentsData[randomIndex]
+      let url = `/${randomPage.url}`
+      window.location.pathname = randomPage.url
+    }
+
     function searchInputChanged(e) {
       const input = e.target.value;
       if (searchFuse) {
         clearSearchResultsDiv();
         const searchResults = searchFuse.search(input);
-        searchResults.forEach( result => renderResultLink(result));
+        searchResults.forEach(result => renderResultLink(result));
       }
     }
 
@@ -808,7 +834,6 @@
 
   <!-- Set header for each file to its filename -->
   <script>
-
     let headerEl = document.getElementById('page-title')
     let page = window.location.pathname
     //Strip trailing / if there is one
@@ -820,9 +845,8 @@
     let title = page.substring(page.lastIndexOf('/') + 1)
     title = title || "Home"
     headerEl.textContent = title
-
-
   </script>
+
 
   <script>
     // FROM http://purecss.io/js/ui.js
