--- a/_til_docs/TCP-IP/Routing.html
+++ b/_til_docs/TCP-IP/Routing.html
@@ -596,15 +596,29 @@
       border-bottom: 1px solid rgb(228, 230, 232);
       padding-bottom: .5rem;
       font-size: 2.07692308rem;
-      font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
       line-height: 1.35;
       font-weight: normal;
       color: rgb(60, 65, 70);
     }
 
+    .search-label-block {
+      display: flex;
+      align-items: center;
+    }
+
+    .search-articles-label {
+      flex: 1;
+    }
+
     #search-result-links {
       margin-bottom: 1rem;
     }
+
+    .shuffle-page:hover {
+      cursor: pointer;
+    }
+
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="utf-8" />
@@ -670,22 +684,26 @@
 <li><a class="" href="IP_Fragmentation.html">IP Fragmentation</a></li>
 <li><a class="" href="IP_Subnets.html">IP Subnets</a></li>
 <li><a class="" href="Network_Layers.html">Network Layers</a></li>
+<li><a class="active" href="Routing.html">Routing</a></li>
 <li><a class="" href="TCP-IP.html">TCP IP</a></li>
 <li><a class="" href="Unix_Specific.html">Unix Specific</a></li>
-<li><a class="active" href="routing.html">routing</a></li>
 </ul>
 <li><a class="" href="../docker-compose.html">docker compose</a></li>
 </ul>
     </nav>
     <article id="main" class="content">
       <h1 id="page-title" class="page-header">Default</h1>
-
-      <label class="mdb-main-label active">Search Articles</label>
+      <div class="search-label-block">
+        <label class="mdb-main-label active search-articles-label">Search Articles</label>
+        <a onclick="linkToRandomPage()" class="shuffle-page">
+          <img src="/public/shuffle.svg" width="23" height="40" />
+        </a>
+      </div>
       <input id="article-search" type="text" class="w-100 search-input" placeholder="Vue..."></input>
       <div id="search-result-links">
 
       </div>
-      
+
       <h1 id="establishing-packet-routes">Establishing Packet Routes <a class="heading-anchor-permalink" href="#establishing-packet-routes">#</a></h1>
 <p>Historically a portion of the IP datagram can be used to record the routers a packet hits along the way in the IP headers. However, IP headers are a fixed size, and thus you can only record up to 9 IPv4 addresses in a single packet. As the internet grew, this quickly became too few to record all of the hops. Thus, <code>traceroute</code> was written to find all the hops a packet takes between destinations.</p>
 <p>Additionally, each IP datagram has a <code>TTL</code> (Time to life) field that is used to prevent packets from getting into routing loops. Traditionally this starts at 64 and is decremented at every hop. When <code>TTL</code> gets to 1, if the router cannot forward the packet to its finally destination it discards the packet and sends a timeout error with its IP address to the original packet source address.</p>
@@ -758,7 +776,7 @@
     let searchFuse;
     const searchResultsDiv = document.getElementById("search-result-links");
 
-    function renderResultLink(result){
+    function renderResultLink(result) {
       const url = result.item.url;
       let link = document.createElement("a");
       link.className = "search-link";
@@ -770,15 +788,23 @@
       searchResultsDiv.appendChild(link);
     }
 
-    function clearSearchResultsDiv(){
+    function clearSearchResultsDiv() {
       searchResultsDiv.innerHTML = "";
     }
+
+    function linkToRandomPage(){
+      let randomIndex = Math.floor(Math.random() * contentsData.length )
+      let randomPage = contentsData[randomIndex]
+      let url = `/${randomPage.url}`
+      window.location.pathname = randomPage.url
+    }
+
     function searchInputChanged(e) {
       const input = e.target.value;
       if (searchFuse) {
         clearSearchResultsDiv();
         const searchResults = searchFuse.search(input);
-        searchResults.forEach( result => renderResultLink(result));
+        searchResults.forEach(result => renderResultLink(result));
       }
     }
 
@@ -812,7 +838,6 @@
 
   <!-- Set header for each file to its filename -->
   <script>
-
     let headerEl = document.getElementById('page-title')
     let page = window.location.pathname
     //Strip trailing / if there is one
@@ -824,9 +849,8 @@
     let title = page.substring(page.lastIndexOf('/') + 1)
     title = title || "Home"
     headerEl.textContent = title
-
-
   </script>
+
 
   <script>
     // FROM http://purecss.io/js/ui.js
